syntax = "proto3";

package ConfigOptions;

option go_package = "../config";

message ParseConfigRequest {
    string tempPath = 1;
    string path = 2;
    bool debug = 3;
}

message ParseConfigResponse {
    optional string error = 1;
}

message GenerateConfigRequest {
    string path = 1;
    bool debug = 2;
}

message GenerateConfigResponse {
    string config = 1;
    optional string error = 2;
}

service CoreService {
    rpc ParseConfig(ParseConfigRequest) returns (ParseConfigResponse);
    rpc GenerateFullConfig(GenerateConfigRequest) returns (GenerateConfigResponse);
}